celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: aksregistry33.azurecr.io/image-workflow-1753287535041
        imagePullPolicy: Never
        command: ["celery", "-A", "backend", "worker", "--loglevel=info"]
        volumeMounts:
        - name: code-volume
          mountPath: /code
      volumes:
      - name: code-volume
        hostPath:
          path: /code
